# uuid_macro

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
uuid_macro_impl/: Cargo.toml
uuid_macro_impl/src/: lib.rs
