[package]
authors = [
    "Hunar Roop Kahlon <hunar.roop@gmail.com>",
    "YISH <mokeyish@hotmail.com>"
]
description = "Procedural uuid!() macro for compile-time uuid creation"
license = "Apache-2.0/MIT"
name = "uuid_macro"
repository = "https://github.com/uuid-rs/uuid_macro"
version = "0.1.0"


[dependencies]
uuid_macro_impl = { path = "./uuid_macro_impl"}
proc-macro-hack = { version = "0.4"}
#uuid = { path = "../uuid"}
uuid = { git = "https://github.com/mokeyish/uuid.git", branch = "nightly-uuid"}
